--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "expressbooster",
   "version": "0.0.1",
+  "icon": "resources/icon.svg",
   "description": "Effortless Express: A Rapid Application Server with Seamless Template Integration",
   "author": "Atul Mahankal <atulmahankal@gmail.com>",
   "main": "server.js",
+  "exports": {
+    ".": {
+      "require": {
+        "types": "./server.d.ts",
+        "default": "./server.js"
+      },
+      "default": "./server.js"
+    }
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mahankals/ExpressBooster"
+    "url": "https://github.com/mahankals/ExpressBooster"
   },
   "keywords": [
     "node",
