--- a/package.json
+++ b/package.json
@@ -41,11 +41,20 @@
   },
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-group-routes": "^1.1.0",
     "express-list-endpoints": "^6.0.0",
+    "helmet": "^7.1.0",
+    "method-override": "^3.0.0",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
     "portscanner": "^2.2.0",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "serve-favicon": "^2.5.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "debug": "^4.3.4"
