cli commands added

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Effortless Express: A Rapid Application Server with Seamless Template Integration",
   "author": "Atul Mahankal <atulmahankal@gmail.com>",
   "main": "server.js",
+  "bin": "./bin/command.js",
   "exports": {
     ".": {
       "require": {
@@ -14,6 +15,10 @@
       "default": "./server.js"
     }
   },
+  "files": [
+    "bin/",
+    ".gitignore"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/mahankals/ExpressBooster"
@@ -41,6 +46,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cli-steps": "github:mahankals/cli-steps",
+    "colors": "^1.4.0",
+    "commander": "^11.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -52,8 +60,10 @@
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "portscanner": "^2.2.0",
+    "readline": "^1.3.0",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
+    "simple-git": "^3.22.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
