--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cli-color": "^2.0.3",
     "cli-steps": "github:mahankals/cli-steps",
     "colors": "^1.4.0",
     "commander": "^11.1.0",
